# vllm-ampere-optimized

./: .gitattributes  .gitignore  README.md
autotune/: .gitignore  DESIGN.md  PARAMS.md  README.md  pyproject.toml  pyrightconfig.json
autotune/ampere_autotune/: __init__.py  cli.py  serve_autotune.py
autotune/ampere_autotune/half_a/: __init__.py  analytical.py  classify.py  cotune.py  delta.py  economics.py  hw_factors.py  measure.py  prescribe.py  results.py
autotune/ampere_autotune/half_b/: __init__.py  advise.py  gate.py  monitor.py  orchestrate.py  profile_store.py  safety.py  search.py  silicon.py  tui.py
autotune/ampere_autotune/preflight/: __init__.py  _nvml.py  driver_state.py  matrix.py  oc_perm.py  sku.py  telemetry_perm.py
autotune/instruments/: README.md
autotune/instruments/bw_verify/: Makefile  bw_verify.cu
autotune/probe/: README.md
autotune/profiles/: README.md
autotune/tests/: conftest.py  test_advise.py  test_analytical.py  test_classify.py  test_cotune.py  test_delta.py  test_economics.py  test_gate.py  test_hw_factors.py  test_memoc.py  test_preflight.py  test_profile_store.py  test_results.py  test_safety_tui.py  test_search.py  test_serve_autotune.py
benchmarks/: README.md  analyze_nsys.py  analyze_torch_prof.py  bench_gdn_recurrent_decode.py  bench_gdn_state_dtype.py  bench_marlin_gemm_imma.py  bench_marlin_moe_decode.py  bench_moe_wna16_decode.py  diffusiongemma_eval.py  diffusiongemma_gsm8k.py  diffusiongemma_hf_devmap.py  diffusiongemma_inproc_tp.py  diffusiongemma_int8_nancheck.py  diffusiongemma_int8_nansrc.py  eval_oai.py  (+11 more)
(+199 files in other folders)
